Fix messages overlap

--- a/static/style.css
+++ b/static/style.css
@@ -116,6 +116,7 @@ kbd {
 
 .messages {
     position: fixed;
+    z-index: 5;
     bottom: 0;
     left: 0;
     width: 100%;
